# lite_ssl

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  Makefile  README.md  ddp_training.sbatch  hf_example.py  opencode.json  pyproject.toml  requirements.txt  test.py  train.py
checkpoints/assets/: convert_to_weights_only.py
configs/dino/: vit_b16_ep100.json  vit_b16_ep300.json  vit_s16_ep100.json  vit_s16_ep300.json
configs/ibot/: vit_b16_ep100.json  vit_b16_ep300.json  vit_s16_ep100.json  vit_s16_ep300.json
configs/lejepa/: vit_b16_ep100.json  vit_b16_ep300.json  vit_s16_ep100.json  vit_s16_ep300.json
docs/: checkpoints.md  training_infra.md
lite_ssl/: __init__.py  config.py  util.py  wandb_util.py
lite_ssl/aug/: __init__.py
lite_ssl/aug/simple/: __init__.py  base_transform.py  dino.py
lite_ssl/data/: __init__.py  ade20k.py  cifar.py  coco.py  im_simple.py  mnist.py  nico.py  util.py
lite_ssl/data/imagenet/: __init__.py  image_net.py  image_net_22k.py
lite_ssl/layers/: __init__.py  attention.py  block.py  cva_head.py  dino_head.py  fp8_linear.py  layer_scale.py  lg_head.py  mlp.py  patch_embed.py  rope_attention.py  rope_block.py  rope_position_encoding.py  sparse_linear.py  swiglu_ffn.py
lite_ssl/loss/: __init__.py
lite_ssl/model/: __init__.py
lite_ssl/optim/: optim.py
lite_ssl/scheduling/: schedulers.py  util.py
lite_ssl/trainer/: __init__.py  base.py  dino_pretrain.py  dinobot_pretrain.py  lejepa_ms_pretrain.py  lejepa_ss_pretrain.py  util.py
lite_ssl/utils/: __init__.py  download.py  masking.py  utils.py
(+19 files in other folders)
