[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lite_ssl"
version = "0.0.1"
description = "Rapid prototyping project using boilerplate that is ready to use out of the box."
authors = [
  { name = "Tenbatsu24" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",

]
requires-python = "~=3.12"

[tool.black]
target-version = ['py312']
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["lite_ssl"]
force_sort_within_sections = true
